Add images, description, ingredients and steps

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
       width="400"
       height="300"
     />
-    
-
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <div>
+      <ul>
+        <li>
+          <a href="recipes/lasagna.html">Lasagna</a>
+        </li>
+        <li>
+          <a href="recipes/pizza.html">Pizza</a>
+        </li>
+        <li>
+          <a href="recipes/momo.html">Momo </a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
