--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,2 +1,39 @@
-<img src="https://media.istockphoto.com/id/535851351/photo/lasagna-on-a-square-white-plate.webp?b=1&s=170667a&w=0&k=20&c=kcmkTTCw6EchOzs2QEbNwOwmy_f7Dv7bAIDQV_kf-Bc=" alt="Pic of a lasagna">
+<img
+  src="https://media.istockphoto.com/id/535851351/photo/lasagna-on-a-square-white-plate.webp?b=1&s=170667a&w=0&k=20&c=kcmkTTCw6EchOzs2QEbNwOwmy_f7Dv7bAIDQV_kf-Bc="
+  alt="Pic of a lasagna"
+  width="400"
+  height="300"
+/>
 
+<div>
+  <h2>Description</h2>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ea explicabo
+    alias dolorem natus hic dolorum beatae nihil voluptates, eaque recusandae
+    ullam. Nulla ut tenetur ducimus incidunt at magnam facere.
+  </p>
+</div>
+<div>
+  <h3>Ingedrients</h3>
+  <ul>
+    <li>aklfjdN</li>
+    <li>jkafdj</li>
+    <li>dkljaf</li>
+    <li>ijdfakl</li>
+    <li>jdafkj</li>
+  </ul>
+</div>
+
+<div>
+  <h3>Steps</h3>
+  <ol>
+    <li>Step 1</li>
+    <li>Step 2</li>
+    <li>Step 3</li>
+    <li>Step 4</li>
+    <li>Step 5</li>
+    <li>Step 6</li>
+    <li>Step 7</li>
+    <li>Step 8</li>
+  </ol>
+</div>
